--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<version>5.3.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.webjars.npm/bootstrap-icons -->
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>bootstrap-icons</artifactId>
+			<version>1.11.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
